@@ -286,6 +286,10 @@ BOOL CAddEdit_PropertySheet::OnCommand(WPARAM wParam, LPARAM lParam)
           m_AEMD.pci->SetURL(m_AEMD.URL);
           m_AEMD.pci->SetAutoType(m_AEMD.autotype);
           m_AEMD.pci->SetPWHistory(m_AEMD.PWHistory);
+          m_AEMD.PWHistory = m_AEMD.PWHistory;
+          m_AEMD.oldNumPWHistory = m_AEMD.NumPWHistory;
+          m_AEMD.oldMaxPWHistory = m_AEMD.MaxPWHistory;
+          m_AEMD.oldSavePWHistory = m_AEMD.SavePWHistory;
 
           switch (m_AEMD.ipolicy) {
             case DEFAULT_POLICY:
